[package]
name = "git-changelog"
description = "Generate a changelog using the git commit history"
version = "0.2.3"
authors = ["Florentin DUBOIS <florentin.dubois@hey.com>"]
build = "build.rs"
edition = "2021"

[dependencies]
askama = "^0.11.1"
git2 = "^0.14.2"
structopt = { version = "^0.3.26", features = ["paw"] }
chrono = "^0.4.19"
config = "^0.13.1"
serde = { version = "^1.0.136", features = ["derive"] }
slog = "^2.7.0"
slog-term = "^2.9.0"
slog-async = "^2.7.0"
slog-scope = "^4.4.0"
regex = "^1.5.5"
strfmt = "^0.1.6"
paw = "^1.0.0"

[build-dependencies]
askama = "^0.11.1"
git2 = "^0.14.2"
chrono = "^0.4.19"
mrml = "1.2"

[profile.release]
lto = true

[profile.bench]
lto = true
